--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.2",
-    "@tanstack/react-query": "^5.85.6",
-    "react-hot-toast": "^2.4.0" 
+    "react-hot-toast": "^2.4.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
-    "vite": "^4.5.3",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "vite": "^4.5.3",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
